web-infras/parser/tests/fixtures/babel/es2017/async-functions/4/output.txt
[SyntaxError]: Modifier await can not using in there. (1,12)
1|({ async a });
 |          ^
